[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nthlayer-measure"
version = "0.3.0"
description = "Universal quality measurement engine for AI agent output"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = ["pyyaml>=6.0", "httpx>=0.27", "nthlayer-common", "nthlayer-learn"]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23,<1.0", "ruff>=0.8", "fastapi>=0.115"]
otel = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0"]

[project.scripts]
nthlayer-measure = "nthlayer_measure.cli:main"

[tool.uv.sources]
nthlayer-learn = { path = "../nthlayer-learn/lib/python" }
nthlayer-common = { path = "../nthlayer-common" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
